# demo-ca

./: CHANGELOG.md  README.md  TECHNICAL_SPECIFICATION.md  manage.py  pyproject.toml  verify.py
adapters/db/django_orm/: apps.py  models.py  repositories.py
adapters/db/django_orm/migrations/: 0001_initial.py
adapters/web/drf_api/: apps.py  serializers.py  urls.py  views.py
config/: di.py  settings.py  urls.py
domain/: events.py  exceptions.py  value_objects.py
domain/entities/: base.py  catalog.py  client.py  company.py  order.py  outlet.py
domain/interfaces/: crud_repository.py  gateways.py  repositories.py
domain/services/: delivery_service.py  loyalty_service.py  pricing_service.py
domain/use_cases/: catalog_cases.py  client_cases.py  company_cases.py  crud.py  external_order_cases.py  loyalty_cases.py  order_cases.py  outlet_cases.py
tests/: test_catalog_cases.py  test_external_order_cases.py  test_loyalty_cases.py  test_order_cases.py
tests/adapters/db/: test_django_orm.py
tests/adapters/web/: test_drf_api.py
